[gd_scene load_steps=17 format=3 uid="uid://rna4fbhwckih"]

[ext_resource type="Script" path="res://Scripts/end_page.gd" id="1_7vj3x"]
[ext_resource type="Texture2D" uid="uid://dujq4xs6wxr3d" path="res://Sprites/Banana Man Animations/die (single frame).png" id="2_flymk"]
[ext_resource type="Texture2D" uid="uid://iagcmq43wug1" path="res://Background Layers/aqua gradient lighter.png" id="3_rgvts"]
[ext_resource type="FontFile" uid="uid://dtum6hucd3rqa" path="res://Fonts/FreeCheese-Regular.otf" id="3_u8hgx"]
[ext_resource type="Theme" uid="uid://b0u0rq7ucwsr8" path="res://assets/default_custom_theme.tres" id="4_vr7sv"]
[ext_resource type="Texture2D" uid="uid://b3niqi0oobfqo" path="res://Jungle Pack UI/PNG/btn/restart.png" id="5_ehdgk"]
[ext_resource type="Texture2D" uid="uid://df70b1stgqjks" path="res://Jungle Pack UI/PNG/btn/close.png" id="6_p500g"]
[ext_resource type="Texture2D" uid="uid://bktihd0ivuhg7" path="res://Jungle Pack UI/PNG/btn/yellow splat (btn).png" id="7_dgtvm"]
[ext_resource type="Texture2D" uid="uid://cry8noy301flg" path="res://Jungle Pack UI/PNG/btn/hover_replay.png" id="8_hbcpw"]
[ext_resource type="Texture2D" uid="uid://dcwek10e3pdtg" path="res://Jungle Pack UI/PNG/btn/hover_close.png" id="10_jn11l"]
[ext_resource type="Texture2D" uid="uid://dijrqebvvvwj8" path="res://Jungle Pack UI/PNG/btn/menu.png" id="11_q5rse"]
[ext_resource type="Texture2D" uid="uid://bfdf2p5y7bvuw" path="res://Jungle Pack UI/PNG/btn/hover_menu.png" id="12_v5x0d"]

[sub_resource type="LabelSettings" id="LabelSettings_7cssc"]
font = ExtResource("3_u8hgx")
font_size = 160
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qewg4"]
font = ExtResource("3_u8hgx")
font_size = 160
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wehpi"]
font = ExtResource("3_u8hgx")
font_size = 65
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xxw1e"]
font = ExtResource("3_u8hgx")
font_size = 65
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="EndPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01865, 1.06442)
script = ExtResource("1_7vj3x")
metadata/_edit_vertical_guides_ = [256.0, 1920.0]
metadata/_edit_horizontal_guides_ = [1080.0]

[node name="AquaGradientLighter" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 520)
scale = Vector2(1.00384, 0.962602)
texture = ExtResource("3_rgvts")

[node name="Black Title" type="Label" parent="AquaGradientLighter"]
offset_left = -724.394
offset_top = -477.74
offset_right = 437.606
offset_bottom = -294.74
text = "Game Over
"
label_settings = SubResource("LabelSettings_7cssc")

[node name="White Title" type="Label" parent="AquaGradientLighter"]
offset_left = -710.541
offset_top = -471.507
offset_right = 451.459
offset_bottom = -288.507
text = "Game Over
"
label_settings = SubResource("LabelSettings_qewg4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 19

[node name="ThisHeight" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vr7sv")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 80
text = "Height Reached = 0'"
horizontal_alignment = 2

[node name="BestHeight" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_vr7sv")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 80
text = "Best Height Ever = 0'"
horizontal_alignment = 2

[node name="Die(singleFrame)" type="Sprite2D" parent="."]
position = Vector2(1512, 496)
rotation = -0.203585
texture = ExtResource("2_flymk")

[node name="TextureButton (Replay)" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 251.314
offset_top = 778.132
offset_right = 466.314
offset_bottom = 993.132
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("5_ehdgk")
texture_pressed = ExtResource("7_dgtvm")
texture_hover = ExtResource("8_hbcpw")

[node name="Replay" type="Label" parent="TextureButton (Replay)"]
layout_mode = 0
offset_left = 276.143
offset_top = 48.8348
offset_right = 682.143
offset_bottom = 191.835
scale = Vector2(1.68317, 1.34724)
text = "Replay

"
label_settings = SubResource("LabelSettings_wehpi")

[node name="TextureButton (Quit)" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1342.95
offset_top = 789.162
offset_right = 1557.95
offset_bottom = 1004.16
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("6_p500g")
texture_pressed = ExtResource("7_dgtvm")
texture_hover = ExtResource("10_jn11l")

[node name="Quit" type="Label" parent="TextureButton (Quit)"]
layout_mode = 0
offset_left = 276.143
offset_top = 48.8348
offset_right = 682.143
offset_bottom = 191.835
scale = Vector2(1.68317, 1.34724)
text = "Quit

"
label_settings = SubResource("LabelSettings_xxw1e")

[node name="TextureButton (Menu)" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 848.181
offset_top = 781.646
offset_right = 1063.18
offset_bottom = 996.646
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("11_q5rse")
texture_pressed = ExtResource("7_dgtvm")
texture_hover = ExtResource("12_v5x0d")

[node name="Menu" type="Label" parent="TextureButton (Menu)"]
layout_mode = 0
offset_left = 256.651
offset_top = 47.3592
offset_right = 662.651
offset_bottom = 200.359
scale = Vector2(1.68317, 1.34724)
text = "Menu

"
label_settings = SubResource("LabelSettings_xxw1e")

[connection signal="pressed" from="TextureButton (Replay)" to="." method="_on_texture_button_replay_pressed"]
[connection signal="pressed" from="TextureButton (Quit)" to="." method="_on_texture_button_quit_pressed"]
[connection signal="pressed" from="TextureButton (Menu)" to="." method="_on_texture_button_menu_pressed"]
